# horn_val_model_v1

./: README.md  pyproject.toml  test.ipynb
model_backup/v1-optimized/: best_model.pt  train.py
model_backup/v2-optimized/: best_model.pt
src/: dataset.py  infer.py  model.py
src/checkpoints/: label_map.yaml
